--- a/frontend/style.css
+++ b/frontend/style.css
@@ -3,27 +3,121 @@
     --icon-width: 3rem;
     --icon-length: 3rem;
     --navcolor: #ff7e6b;
-    --textcolor: #fffafb;
+    --textcolor: #fffafbdc;
     --divcolor: #7f7eff;
     --bordercolor: #2A7F62;
 }
 *{
     background-color: var(--background);
+    color: var(--textcolor);
     margin: 0;
     padding: 0;
     box-sizing: 0;
 }
+p
+{
+    width: fit-content;
+    block-size: fit-content;
+}
+a
+{
+    color: var(--textcolor);
+}
+h2
+{
+    padding-bottom: 0.5rem ;
+}
 
-.basic{
-    
+.navList
+{
+    list-style-type: none;
+    width: 23%;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+    border: thin solid var(--bordercolor);
+    z-index: 2;
+}
+
+.navListItem a 
+{
+    display: block;
+    color: var(--textcolor);
+    padding: 8px 16px;
+    text-decoration: none;
+}
+.iconLi
+{
+    display: inline;
+    padding: 2px;
+}
+.underLine
+{
+    text-decoration: underline;
+    color: var(--textcolor);
+}
+.correctMargin
+{
+    margin-left: 25%;
+    padding: 20px;
+}
+.correctTextColor
+{
+    color: var(--textcolor);
+}
+.icon
+{
+    width: 3rem;
+    height: 3rem;
+}
+.elTitleOfSKil
+{
+    display: inline;
+}
+.elTitleOfSKil h2
+{
+    padding-top: 1rem;
+    color: var(--divcolor);
+    text-decoration: underline;
+}
+.elTitleOfSKil p
+{
     color:var(--textcolor);
-    background-color: var(--divcolor);
-    border-color: var(--bordercolor);
-    width:12rem;
-    height: 12rem;
-    border-radius: 50px;
-    background: linear-gradient(145deg);
-    box-shadow:  10px 10px 30px var(--navcolor),
-                 -10px -10px 30px var(--divcolor);
-    
+}
+
+.hidden
+{
+    opacity: 0;
+    transition: all 3s;
+    transform: translateX(-100%);
+}
+.show
+{
+    opacity: 1;
+    transform: translateX(0%);
+}
+.myFace
+{
+    width: 400px;
+    height: 500px;
+    z-index: 1;
+}
+.padMeDaddy
+{
+    padding: 1rem;
+}
+.aboutMe
+{
+    display: flex;
+}
+.projectDiv {
+    border: solid var(--bordercolor);
+    color: var(--textcolor);
+    padding-bottom: 2rem;
+    width: 400px;
+}
+
+.backgroundButton
+{
+    background-color: green;
 }
